wordpress/wordpress_Deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: zy881001-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: wordpress
          image: bitnami/wordpress:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: wordpress-data
              mountPath: /bitnami/wordpress
      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: wordpress-pvc
