wordpress/wordpress_Service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: zy881001-dev
spec:
  selector:
    app: wordpress
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
