wordpress/wordpress_Ingress.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: wordpress
  namespace: zy881001-dev
spec:
  to:
    kind: Service
    name: wordpress
  port:
    targetPort: http
  tls:
    termination: edge
